--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a href="#" class="navbar-brand mr-auto">Ristorante Con Fusion</a>
+        <a href="#" class="navbar-brand mr-auto"><img src="img/logo.png" height="30" width="41"></a>
         <div class="collapse navbar-collapse" id="Navbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span> Home</a></li>
@@ -43,7 +43,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class="col-12 col-sm align-self-center">
+                    <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm align-self-center">
+                    <a href="#Reserve" class="btn btn-lg ntn-block btn-warning">Reserve a Table </a>
                 </div>
             </div>
         </div>
@@ -55,20 +59,30 @@
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
             <div class="col col-sm col-md order-sm-first">
-                <h2>Uthappizza</h2>
-                <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="uthappizza">
+                    <div class="media-body">
+                        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span>
+                         <span class="badge badge-pill badge-secondary">$4.99</span></h2>
+                        <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>        
+                    </div>
+                </div>
+
             </div>
         </div>
-
-
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
-            </div>
+                <div class="media">
+                    <div class="media-body">
+                        <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                    </div>
+                    <img class="d-flex ml-3 img-thumbnail align-self-center" src="img/buffet.png" alt="buffet">
+                </div>
+             </div>
         </div>
 
         <div class="row row-content align-items-center">
@@ -76,9 +90,50 @@
                 <h3>Meet our Culinary Specialists</h3>
             </div>
             <div class="col col-sm col-md order-sm-first">
-                <h2>Alberto Somayya</h2>
-                <h4>Executive Chef</h4>
-                <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.png" alt="alberto">
+                    <div class="media-body">
+                        <h2>Alberto Somayya</h2>
+                        <h4>Executive Chef</h4>
+                        <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                    </div>
+                </div>      
+            </div>
+        </div>
+        <div class="row row-content justify-content-center">
+            <div class="col-12 col-md-8" id="Reserve">
+                <h1 class="bg-warning text-white"> Reserve a Table </h1>
+            </div>
+            <div class="col-12 col-md-8">
+                <form >
+                    <div class="form-group row">
+                        <label class="col-md-2 col-form-label">
+                            Number of Guests
+                        </label>
+                        <div class="col-md-10">
+                            <input type="radio"   name="numguests" value="1"> 1
+                            <input type="radio"   name="numguests" value="2"> 2
+                            <input type="radio"   name="numguests" value="3"> 3
+                            <input type="radio"   name="numguests" value="4"> 4
+                            <input type="radio"   name="numguests" value="5"> 5
+                            <input type="radio"   name="numguests" value="6"> 6
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="time" class="col-md-2 col-form-label"> Date and Time</label>
+                        <div class="col-12 col-md">
+                            <input type="text" id="time" name="date" placeholder="Date">
+                        </div>
+                        <div class="col-12 col-md">
+                            <input type="text" name="time" placeholder="Time">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="offset-md-2 col-md-10">
+                            <button type="submit" class="btn btn-primary">Reserve</button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
@@ -113,7 +168,7 @@
                         <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin fa-lg"></i></a>
                         <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter fa-lg"></i>:</a>
                         <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube fa-lg"></i></a>
-                        <a class="btn btn-social-icon" href="mailto:">Mail</a>
+                        <a class="btn btn-social-icon" href="mailto:abc@abc.com">Mail</a>
                     </div>
                 </div>
            </div>
